navbar overlapping fixed, images still wack

--- a/community-portal-prefilled/public/css/style.css
+++ b/community-portal-prefilled/public/css/style.css
@@ -9,8 +9,10 @@ body {
   padding: 0;
   margin: 0;
 }
+
 .container {
   flex: 1;
+  padding-top: 80px;
 }
 .page-wrapper {
   min-height: 100%;
@@ -34,7 +36,7 @@ body {
 }
 
 .navbar {
-  /*background-image: radial-gradient(circle, #4d935f 0%, #00d4ff 100%);*/
+  position: fixed;
   overflow: hidden;
 }
 .navbar a {
